--- a/style.css
+++ b/style.css
@@ -2,4 +2,81 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    list-style-type: none;
+    text-decoration: none;
+    outline: none;
 }
+html{
+    scroll-behavior: smooth;
+}
+.container{
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    background-color: #333;
+    align-items: center;
+    padding: 1rem;
+}
+.card{
+    background-color: #222;
+    color: white;
+    padding: 1rem;
+    min-height: 80vh;
+    width: 50%;
+    overflow: scroll;
+    border-radius: 1rem;
+}
+.card-tile{
+    font-size: 2.5rem;
+    text-align: center;
+    margin-bottom: 1rem;
+}
+input{
+    border-radius: 0.6rem;
+    padding: 0.5rem;
+    width: 80%;
+    border: none;
+}
+.btn{
+    border: none;
+    border-radius: 0.6rem;
+    padding: 0.5rem;
+   background-color: orange;
+    color: white;
+    cursor: pointer;
+    transition: all 0.3s;
+    width: 19%;
+}
+.btn:hover{
+    background-color: white;
+    color: black;
+}
+.li-style{
+    justify-content: space-between;
+    display: flex;
+    color: white;
+    padding: 0.5rem;
+    align-items: center;
+    border-radius: 0.6rem;
+    margin: 1rem 0;
+    background-color: #333;
+    transition: all 0.3s;
+}
+.li-style:hover{ 
+    background-color: #111;
+}
+.bg-success{
+    margin: 0.5rem 0;
+    padding: 0.5rem;
+    color: black;
+    background-color: #ddffdd;
+    border-left: 6px solid #04aa6d;
+}
+.bg-danger{
+    margin: 0.5rem 0;
+    padding: 0.5rem;
+    color: black;
+    background-color: #ffdddd;
+    border-left: 6px solid #f44336;
+}
+
